--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
             EDM_STORE
         </p>
 
-        <!-- kotak-keterangan -->
-        <div class="kotak-1"></div>
-        <div class="kotak-2"></div>
-
         <!-- icons -->
         <div class="icon-instagram">
             <a href="https://www.instagram.com/edm___store/?hl=id">
@@ -78,7 +74,7 @@
             Masih bingung milih barang pada saat belanja online ?
         </p>
         <p class="ket-3" data-aos="fade-up" data-aos-duration="600">
-            Tenang EDM_STOREE akan bantu kamu milih barang dengan harga terjangkau dan kualitas terbaik pastinya,jadi kamu tidak perlu khawatir lagi dengan masalah barang karna kami selalu memperhartikan ratting toko dan product yang kami afiiliasikan tentu nya jadi
+            Tenang EDM_STOREE akan bantu kamu milih barang dengan harga terjangkau dan kualitas terbaik pastinya,jadi kamu tidak perlu khawatir lagi dengan masalah barang karna kami selalu memperhartikan rating toko dan product yang kami afiiliasikan tentu nya jadi
             kamu tidak pelu khawatir
         </p>
         <p class="ket-4" data-aos="fade-up" data-aos-duration="600">
@@ -159,7 +155,6 @@
             relativeInput: true
         });
     </script>
-
 
     <!-- link animasi muncul content -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
