--- a/website tokopedia/index.html
+++ b/website tokopedia/index.html
@@ -1,24 +1,145 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        h1 {
-            display: flex;
-            justify-content: center;
-            margin-top: 300px;
-            font-family: monospace;
-            font-size: 50px;
-        }
-    </style>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- my style -->
+    <link rel="stylesheet" href="style.css">
+
+    <title>Hello, world!</title>
 </head>
 
 <body>
-    <h1>WEBSITE INI DALAM TAHAP PENGERJAAN</h1>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #84C567;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- end navbar -->
+
+    <!-- iklan -->
+    <div class="container iklan">
+        <div class="row">
+            <div class="col">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="aset/contoh.webp" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="aset/contoh.webp" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="aset/contoh.webp" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end iklan -->
+
+    <!--icons jenis product -->
+    <div class="container jenis-product">
+        <div class="row">
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="kotak-1"></div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="kotak-2"></div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="kotak-3"></div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="kotak-4"></div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="kotak-5"></div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="kotak-6"></div>
+            </div>
+        </div>
+    </div>
+    <!-- end icons jenis product -->
+
+    <!-- product -->
+    <div class="container product">
+        <div class="row">
+            <div class="col-3">
+                <div class="box-1"></div>
+            </div>
+            <div class="col-3">
+                <div class="box-2"></div>
+            </div>
+            <div class="col-3">
+                <div class="box-3"></div>
+            </div>
+            <div class="col-3">
+                <div class="box-4"></div>
+            </div>
+            <div class="col-3">
+                <div class="box-5"></div>
+            </div>
+            <div class="col-3">
+                <div class="box-6"></div>
+            </div>
+            <div class="col-3">
+                <div class="box-7"></div>
+            </div>
+            <div class="col-3">
+                <div class="box-8"></div>
+            </div>
+        </div>
+    </div>
+    <!-- end product -->
+
+
+
+
+    <!-- javascript bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
