memasukan dan merubah file baru

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <!-- link animasi muncul content -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- link icons -->
+    <link rel="icon" href="aset/logo-1.jpg">
+    <title>edm_storee</title>
 </head>
 
 <body>
