--- a/webiste shopee/index.html
+++ b/webiste shopee/index.html
@@ -1,24 +1,140 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        h1 {
-            display: flex;
-            justify-content: center;
-            margin-top: 300px;
-            font-family: monospace;
-            font-size: 50px;
-        }
-    </style>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- my style css -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- link font-google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Prompt:wght@600&display=swap" rel="stylesheet">
+
+    <!-- link icon -->
+    <link rel="icon" href="aset/logo-1.jpg">
+    <title>edmstoree</title>
 </head>
 
 <body>
-    <h1>WEBSITE INI DALAM TAHAP PENGERJAAN</h1>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FE6332;">
+        <div class="container">
+            <a class="navbar-brand" href="https://www.instagram.com/edm___store/" style=" font-family: 'Fredoka One', cursive; font-size: 15px;">EDM_STOREE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#kategori">Product</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- end navbar -->
+
+    <!-- iklan -->
+    <div class="container iklan">
+        <div class="row">
+            <div class="col">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="aset/contoh.webp" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="aset/contoh.webp" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="aset/contoh.webp" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end iklan -->
+
+    <!-- kategori -->
+    <section id="kategori" style="padding-top: 2rem ;">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p class="name-kategori">KATEGORI</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end kategori -->
+
+    <!-- icons katergori -->
+    <div class="container icons">
+        <div class="row">
+            <div class="row" style="margin-left: 90px;">
+                <div class="col-4 col-md-2">
+                    <a href="">
+                        <img src="aset/tas.png" alt="" class="tas">
+                    </a>
+                </div>
+                <div class="col-4 col-md-2">
+                    <a href="">
+                        <img src="aset/baju.png" alt="" class="baju">
+                    </a>
+                </div>
+                <div class="col-4 col-md-2">
+                    <a href="">
+                        <img src="aset/sepatu.png" alt="" class="sepatu">
+                    </a>
+                </div>
+                <div class="col-4 col-md-2">
+                    <a href="">
+                        <img src="aset/electronik.png" alt="" class="elektronik">
+                    </a>
+                </div>
+                <div class="col-4 col-md-2">
+                    <a href="">
+                        <img src="aset/alattulis.png" alt="" class="alattulis">
+                    </a>
+                </div>
+                <div class="col-4 col-md-2">
+                    <a href="">
+                        <img src="aset/jamtangan.png" alt="" class="jamtangan">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- end icons kategori -->
+
+
+
+
+
+        <!-- java script bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
