--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- link icons -->
-    <link rel="icon" href="aset/logo-1.jpg">
+    <link rel="icon" href="aset/logo-5.png">
     <title>edm_storee</title>
 </head>
 
