--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         Kami juga bergabung dalam program affiliate Tokopedia dan anda bisa melihat beberapa product yang kami rekomendasikan untuk anda
                     </p>
                     <div class="pembungkus-2">
-                        <a href="website tokopedia/index.html" class="visit-tokopedia">
+                        <a href="#" class="visit-tokopedia">
                         Visit >>
                     </a>
                     </div>
