--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,700;1,700&family=Concert+One&family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
-
+    <!-- link icon -->
+    <link rel="icon" href="aset/logostoree.png">
     <title>EDM_STORE</title>
 </head>
 
@@ -142,7 +143,7 @@
                         Kami juga bergabung dalam program affiliate Tokopedia dan anda bisa melihat beberapa product yang kami rekomendasikan untuk anda
                     </p>
                     <div class="pembungkus-2">
-                        <a href="#" class="visit-tokopedia">
+                        <a href="website tokopedia/index.html" class="visit-tokopedia">
                         Visit >>
                     </a>
                     </div>
